[tool.poetry]
name = "convtools"
version = "0.0.1"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "~3.9"
pytest = "*"
pytest-cov = "*"
pytest-benchmark = "*"

# lint
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pylint = "*"

# build
hatch = "*"

# doc
markdown-include = "*"
mdx-truly-sane-lists = "*"
mkdocs = "*"
mkdocs-exclude = "*"
mkdocs-material = "*"
pygments = "*"
pymdown-extensions = "*"
